--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "differ",
+  "name": "react-differ",
   "version": "1.0.0",
   "description": "file diff tool on web",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,5 +21,20 @@
   "bugs": {
     "url": "https://github.com/nighca/differ/issues"
   },
-  "homepage": "https://github.com/nighca/differ#readme"
+  "homepage": "https://github.com/nighca/differ#readme",
+  "dependencies": {
+    "universal-diff": "^2.0.2"
+  },
+  "peerDependencies": {
+    "react": "^15.5.4"
+  },
+  "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.4.1",
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "react": "^15.5.4",
+    "webpack": "^2.4.1"
+  }
 }
